--- a/src/locale/jp.json
+++ b/src/locale/jp.json
@@ -219,7 +219,8 @@
         "알렉스": "アレックス",
         "수아": "スア",
         "레온": "レオン",
-        "일레븐": "Eleven"
+        "일레븐": "Eleven",
+        "리오": "莉央"
     },
     "weapons": {
         "투척": "投げ", 
@@ -660,7 +661,10 @@
         "저거너트": "ジャガンナート",
         "제베의활": "ジェベの矢",
         "제사장의예복": "祭司長の礼服",
-        "턱시도": "タキシード"
+        "턱시도": "タキシード",
+        "운명의망치": "運命のハンマー",
+        "천근추": "千斤錘",
+        "윈드러너": "ウィンドランナー"
 
     },
     "skill": {
@@ -1318,6 +1322,28 @@
             "R": {
                 "name": "カロリーシールド ",
                 "Detail": "６秒間Elevenの周りにポテトフライが 回転し、1秒ごとに範囲内の敵に50/80/110のダメージを与えます。\n持続時間中にElevenが基本攻撃をすると1回の追加攻撃をして、次の一般スキルが強化されます。"
+            }
+        },
+        "리오": {
+            "T": {
+                "name": "会",
+                "Detail": "莉央の基本攻撃とスキルは命中した対象の防御力を致命打確率に応じて 5/7.5/10%(+致命打確率1%あたり0.25%)減少した状態のダメージを与えます。\n莉央の基本攻撃は致命打が発生しない代わりに110%+{(致命打確率(%) + スキル増幅(%)) * (致命打ダメージ(75%)+(致命打ダメージ増加量(基本0%))} のダメージを与えます。\n基本攻撃ダメージ量は致命打確率とスキル増幅の100%を超えない合計に応じて増加します。\n単弓の場合、会(パッシブ) 基本攻撃追加ダメージの効果が最初の矢にのみ適用されます。"
+            },
+            "Q": {
+                "name": "替え弓",
+                "Detail": "持続効果: 基本攻撃やスキルでダメージを与えると皆中の重畳が増加し、重畳が一定以上になると次の基本攻撃とスキルに追加効果が発生します。\n単弓: 2秒間、移動速度が12/14/16/18/20% 増加し、攻撃速度が10/15/20/25/30%増加します。\n和弓: 対象の失った体力1%あたり0.5% のダメージを増加させ、1.5秒間対象の移動速度を10/15/20/25/30% 減少させます。\n使用効果: 莉央が武器を単弓と和弓へ変更します。\n単弓: 基本攻撃時、2本の矢を発射しそれぞれの攻撃力の40/43/46/49/52%のダメージを与えます。\n和弓: 基本攻撃時、1本の矢を発射し攻撃力の110/114/118/122/126% のダメージを与えます。"
+            },
+            "W": {
+                "name": "離れ",
+                "Detail": "単弓: 指定した方向へ扇型に矢を発射し 30/50/70/90/110(+攻撃力の30%)のダメージを受けた対象の位置に1.5秒間持続され 30/35/40/45/50% の移動速度を減少させる風を生成します。\n和弓: 指定した方向へ強力な1本の矢を発射して45/90/135/180/225(+攻撃力の55%)のダメージを与え、その後ろの敵に15/40/65/90/115(+攻撃力の55%)のダメージを与えます。命中時離れのクールダウンを70%減少させます。"
+            },
+            "E": {
+                "name": "飛翔",
+                "Detail": "単弓: 指定した方向へ飛び上がり、基本攻撃射程距離内の最大3名の敵に2本の矢を発射しそれぞれ 40/50/60/70/80(+攻撃力の30%)ダメージを与えます。敵にダメージを与えると、クールダウンが5/4.5/4/3.5/3秒減少します。\n和弓: 指定した方向へ飛び上がり、基本攻撃射程距離内の最大3名の敵に1本の矢を発射し50/70/90/110/130(+攻撃力の40%) ダメージを与え、対象周辺2m範囲に25/35/45/55/65 (+攻撃力の40%)のダメージを与えます。敵にダメージを与えると、クールダウンが5/4.5/4/3.5/3秒減少します。"
+            },
+            "R": {
+                "name": "連射/正射必中",
+                "Detail": "単弓: 莉央が指定した方向へ３本の矢を素早く発射しそれぞれ40/70/100(+攻撃力の 30%) のダメージを与え、連射/正射必中のクールダウンを５秒減少させます。\n３本目の矢の次の矢は追加で強力な矢を発射して150/200/250 (+攻撃力の 60%)のダメージを与え、命中した対象を後ろに4mノックバックさせます。\nノックバックされた対象が壁に打つかると1秒間気絶させます。\n和弓: 莉央が集中して矢を発射し300/350/400(+攻撃力の 40%) のダメージを与え2秒間命中した対象の移動速度を80%減少させます。\n矢は発射0.8秒後速度が20%、ダメージが 30%増加します。矢は対象と衝突したり、範囲の外まで飛ぶと消滅します。"
             }
         },
 
