--- a/src/locale/ko.json
+++ b/src/locale/ko.json
@@ -218,7 +218,8 @@
         "알렉스": "알렉스",
         "수아": "수아",
         "레온": "레온",
-        "일레븐": "일레븐"
+        "일레븐": "일레븐",
+        "리오": "리오"
     },
     "weapons": {
         "투척": "투척", 
@@ -657,7 +658,10 @@
         "저거너트": "저거너트",
         "제베의활": "제베의활",
         "제사장의예복": "제사장의예복",
-        "턱시도": "턱시도"
+        "턱시도": "턱시도",
+        "운명의망치": "운명의망치",
+        "천근추": "천근추",
+        "윈드러너": "윈드러너"
     },
     "skill": {
         "아야": {
@@ -1318,6 +1322,28 @@
             "R": {
                 "name": "다 덤벼보라구!",
                 "Detail": "6초 동안 일레븐의 주변에 감자튀김이 회전하며 매 초마다 범위 안의 적들에게 50/80/110의 피해를 입힙니다.\n 지속 시간 동안 일레븐이 기본 공격을 할 때마다 1회의 추가 공격을 하며, 스킬을 사용하고 다음 일반 스킬을 1회 즉시 차징 상태로 사용할 수 있습니다."
+            }
+        },
+        "리오": {
+            "T": {
+                "name": "카이",
+                "Detail": "리오의 기본 공격 및 스킬은 적중한 대상의 방어력을 5/7.5/10%(+치명타 확률 1% 당 0.25%)만큼 무시하고 피해를 입힙니다.\n리오의 기본 공격은 치명타가 발생하지 않는 대신 강화된 피해를 입힙니다.\n기본 공격 강화량: 110%+{(치명타 확률+스킬 증폭(%)) * (75%+치명타 피해 증가)}\n단, 치명타 확률+스킬증폭은 100%를 넘을 수 없음\n단궁일 때는 카이(패시브) 기본 공격피해 증가 효과가 첫 번째 화살에만 적용됩니다."
+            },
+            "Q": {
+                "name": "카에유미",
+                "Detail": "단궁: 기본 공격 시, 2개의 화살이 발사되며 각각 공격력의 40/43/46/49/52%, 공격력의 40/43/46/49/52% 의 피해를 입힙니다.\n카이츄 중첩을 터뜨리면 2초 동안 이동속도가 12/14/16/18/20% 증가하고, 공격 속도가 10/15/20/25/30% 증가합니다.\n화궁: 기본 공격 시, 1개의 화살이 발사되며 공격력의 110/114/118/122/126% 의 피해를 입힙니다.\n카이츄 중첩을 터뜨리면 대상의 잃은 체력 1% 당 0.5% 의 피해를 증가시키고, 1.5초간 대상의 이동속도를 10/15/20/25/30% 만큼 감소시킵니다."
+            },
+            "W": {
+                "name": "하나레",
+                "Detail": "단궁: 지정한 방향의 부채꼴 범위에 순차적으로 화살을 발사해 30/50/70/90/110(+공격력의 30%) 의 피해를 입히고, 피해를 입은 대상의 위치에 1.5 초 동안 지속되고 30/35/40/45/50% 만큼 이동 속도를 감소시키는 바람을 생성합니다.\n화궁: 지정한 방향으로 한 발의 강력한 화살을 발사하여 45/90/135/180/225(+공격력의 55%) 의 피해를 입히고, 그 뒤의 적에게 15/40/65/90/115(+공격력의 55%) 의 피해를 입힙니다.\n 적중 시 하나레의 쿨다운을 70% 만큼 감소시킵니다."
+            },
+            "E": {
+                "name": "비상",
+                "Detail": "단궁: 지정한 방향으로 뛰어올라 기본 공격 사거리 내의 최대 3명의 적 대상에게 2개의 화살을 발사하여 각각 40/50/60/70/80(+공격력의 30%) 의 피해를 입힙니다.\n 적 대상에게 피해를 입힌다면 쿨다운이 5/4.5/4/3.5/3 초로 감소합니다.\n화궁: 지정한 방향으로 뛰어올라 기본 공격 사거리 내의 최대 3명의 적 대상에게 1개의 화살을 발사하여 50/70/90/110/130(+공격력의 40%) 의 피해를 입히고, 대상 주변 2m 범위에 25/35/45/55/65 (+공격력의 40%) 의 범위 피해를 입힙니다. \n적 대상에게 피해를 입힌다면 쿨다운이 5/4.5/4/3.5/3초로 감소합니다."
+            },
+            "R": {
+                "name": "연사/정사필중",
+                "Detail": "단궁: 리오가 지정한 방향으로 3개의 화살을 빠르게 발사해 각각 40/70/100(+공격력의 30%) 의 피해를 입히고, 연사/정사필중의 쿨다운을 5초 감소시킵니다.\n 3개의 화살 이후 추가로 강력한 화살을 발사해 150/200/250 (+공격력의 60%) 의 피해를 입히고, 적중한 대상을 뒤로 4m 넉백시킵니다.\n 넉백당한 대상이 벽에 부딪히면 1초 동안 기절시킵니다.\n화궁: 올바른 자세로 집중하여 화살을 발사해 300/350/400(+공격력의 40%) 의 피해를 입히고 2초 동안 적중한 대상의 이동 속도를 80% 만큼 감소시킵니다.\n 화살은 발사 후 0.8초 뒤 속도가 20%만큼, 피해량이 30%만큼 증가합니다.\n 화살은 대상과 충돌하거나 범위의 끝까지 날아가면 소멸합니다."
             }
         },
 
