신캐 윌리엄 추가

--- a/src/locale/jp.json
+++ b/src/locale/jp.json
@@ -220,7 +220,8 @@
         "수아": "スア",
         "레온": "レオン",
         "일레븐": "Eleven",
-        "리오": "莉央"
+        "리오": "莉央",
+        "윌리엄": "ウィリアム"
     },
     "weapons": {
         "투척": "投げ", 
@@ -664,7 +665,13 @@
         "턱시도": "タキシード",
         "운명의망치": "運命のハンマー",
         "천근추": "千斤錘",
-        "윈드러너": "ウィンドランナー"
+        "윈드러너": "ウィンドランナー",
+        "주작자문": "朱雀刺紋",
+        "몽둥이": "棍",
+        "금강저": "金剛杵",
+        "파이어볼": "ファイヤーボール",
+        "프리즘볼": "プリズムボール",
+        "모호크헬멧": "モホークヘルメット"
 
     },
     "skill": {
@@ -1344,6 +1351,28 @@
             "R": {
                 "name": "連射/正射必中",
                 "Detail": "単弓: 莉央が指定した方向へ３本の矢を素早く発射しそれぞれ40/70/100(+攻撃力の 30%) のダメージを与え、連射/正射必中のクールダウンを５秒減少させます。\n３本目の矢の次の矢は追加で強力な矢を発射して150/200/250 (+攻撃力の 60%)のダメージを与え、命中した対象を後ろに4mノックバックさせます。\nノックバックされた対象が壁に打つかると1秒間気絶させます。\n和弓: 莉央が集中して矢を発射し300/350/400(+攻撃力の 40%) のダメージを与え2秒間命中した対象の移動速度を80%減少させます。\n矢は発射0.8秒後速度が20%、ダメージが 30%増加します。矢は対象と衝突したり、範囲の外まで飛ぶと消滅します。"
+            }
+        },
+        "윌리엄": {
+            "T": {
+                "name": "キャッチボール",
+                "Detail": "ウィリアムは基本攻撃をするとき、野球ボールが 2秒に一度ずつ対象に当たってから弾き出て2.5秒間維持されます。\n野球ボールを受けると次の基本攻撃は15/25/35% のダメージを与えます。ウィリアムは野球ボールの方向へ移動するときに移動速度が12/16/20% 増加します。\n野球ボールを受けると12秒間キャッチボールスタックが維持されます。"
+            },
+            "Q": {
+                "name": "シャドウボール",
+                "Detail": "キャッチボールスタックを最大に獲得した状態でスキル使用できます。\nウィリアムが 5秒間攻撃速度が20/25/30/35/40%増加し、基本攻撃をするときにボールを一個追加で投げて15/20/25/30/35%のダメージを与えます。\n野球ボールを受けると最初の攻撃にだけ追加ダメージが適用されます。"
+            },
+            "W": {
+                "name": "ワインドアップ",
+                "Detail": "ウィリアムが指定した方向へ強いボールを投げて経路上の敵に50/75/100/125/150(+攻撃力の 50%)のダメージを与え、 1.5秒間移動速度を22/24/26/28/30% 減少させます。その後、野球ボールは再びウィリアムに戻って、経路上の敵に同一効果を与えながらキャッチボールスタックを獲得します。\n投げたボールと戻るボール両方に命中した対象は1秒間気絶します。\nマウンド: ウィリアムが5秒間維持されるマウンドを生成し、範囲内の敵を突き飛ばします。マウンド上でキャッチボールで弾く野球ボールはウィリアムへ戻り、基本攻撃射程距離が1m増加します。"
+            },
+            "E": {
+                "name": "スライディングキャッチ",
+                "Detail": "持続効果: 野球ボールを受けると 2.5秒間防御力が8/12/16/20/24 増加します。(重畳しない)\nウィリアムが野球ボールの落下地点を対象に指定して素早く移動します。"
+            },
+            "R": {
+                "name": "ウィーニングショット",
+                "Detail": "ウィリアムがジャンプし、指定した地点にボールを投げ、範囲内の敵に150/250/350(+攻撃力の 45%)のダメージを与え、 2秒間移動速度を50%減少させます。中心部の敵は 2秒間移動速度が80%減少します。\n中心部から野球ボール4つが弾き出て 3.5秒間維持されます。"
             }
         },
 
