--- a/src/locale/ko.json
+++ b/src/locale/ko.json
@@ -219,7 +219,8 @@
         "수아": "수아",
         "레온": "레온",
         "일레븐": "일레븐",
-        "리오": "리오"
+        "리오": "리오",
+        "윌리엄": "윌리엄"
     },
     "weapons": {
         "투척": "투척", 
@@ -661,7 +662,13 @@
         "턱시도": "턱시도",
         "운명의망치": "운명의망치",
         "천근추": "천근추",
-        "윈드러너": "윈드러너"
+        "윈드러너": "윈드러너",
+        "주작자문": "주작자문",
+        "몽둥이": "몽둥이",
+        "금강저": "금강저",
+        "파이어볼": "파이어볼",
+        "프리즘볼": "프리즘볼",
+        "모호크헬멧": "모호크헬멧"
     },
     "skill": {
         "아야": {
@@ -1344,6 +1351,28 @@
             "R": {
                 "name": "연사/정사필중",
                 "Detail": "단궁: 리오가 지정한 방향으로 3개의 화살을 빠르게 발사해 각각 40/70/100(+공격력의 30%) 의 피해를 입히고, 연사/정사필중의 쿨다운을 5초 감소시킵니다.\n 3개의 화살 이후 추가로 강력한 화살을 발사해 150/200/250 (+공격력의 60%) 의 피해를 입히고, 적중한 대상을 뒤로 4m 넉백시킵니다.\n 넉백당한 대상이 벽에 부딪히면 1초 동안 기절시킵니다.\n화궁: 올바른 자세로 집중하여 화살을 발사해 300/350/400(+공격력의 40%) 의 피해를 입히고 2초 동안 적중한 대상의 이동 속도를 80% 만큼 감소시킵니다.\n 화살은 발사 후 0.8초 뒤 속도가 20%만큼, 피해량이 30%만큼 증가합니다.\n 화살은 대상과 충돌하거나 범위의 끝까지 날아가면 소멸합니다."
+            }
+        },
+        "윌리엄": {
+            "T": {
+                "name": "캐치볼",
+                "Detail": "윌리엄이 기본 공격을 할 때, 야구공이 2초에 한 번씩 대상에게 맞고 튕겨 나와 윌리엄 근처로 돌아와 2.5초 동안 유지됩니다.\n 야구공을 윌리엄이 받으면 다음 기본 공격은 15/25/35% 의 추가 피해를 입힙니다. \n윌리엄은 야구공의 방향으로 이동할 때 이동 속도가 12/16/20% 증가합니다.\n야구공을 잡으면 12초 동안 캐치볼 스택이 유지되며 최대 3개까지 중첩됩니다."
+            },
+            "Q": {
+                "name": "쉐도우 볼",
+                "Detail": "캐치볼 스택을 최대로 획득한 상태에서 스킬을 사용할 수 있습니다.\n 윌리엄이 5초 동안 공격 속도가 20/25/30/35/40% 증가하며, 기본 공격을 할 때 공 하나를 추가로 던져 15/20/25/30/35%의 추가 피해를 입힙니다.\n야구공을 받으면 첫 번째 공격에만 추가 피해가 적용됩니다."
+            },
+            "W": {
+                "name": "와인드업",
+                "Detail": "윌리엄이 지정한 방향으로 강한 공을 던져 경로 상의 적들에게 50/75/100/125/150(+공격력의 50%)의 피해를 입히며 1.5초 동안 이동 속도를 22/24/26/28/30% 감소시킵니다.\n 잠시 후 야구공은 다시 윌리엄에게로 돌아오며 경로상의 적들에게 동일한 효과를 입히며 캐치볼 스택을 획득합니다. 던진 공과 돌아오는 공에 모두 적중한 대상은 1초 동안 기절합니다.\n마운드 : 윌리엄이 5초 동안 유지되는 마운드를 생성하며 범위 안의 적들을 밀어냅니다.\n 마운드 위에서 캐치볼로 튕겨 나오는 야구공은 윌리엄에게 돌아오며 기본 공격 사거리가 1m 증가합니다."
+            },
+            "E": {
+                "name": "슬라이딩 캐치",
+                "Detail": "지속 효과 : 야구공을 받으면 2.5초 동안 방어력이 8/12/16/20/24 증가합니다. (중첩 되지 않음)\n윌리엄이 야구공의 낙구 지점을 대상으로 지정하여 빠르게 이동합니다."
+            },
+            "R": {
+                "name": "위닝샷",
+                "Detail": "윌리엄이 공중으로 점프하여 지정한 지점으로 공을 던져 범위 안의 적들에게 150/250/350(+공격력의 45%)의 피해를 입히고 2초 동안 이동 속도를 50% 느려지게 합니다.\n 중심부의 적들은 2초 동안 이동 속도가 80% 느려집니다.\n중심부에서 야구공 4개가 튕겨 나와 3.5초 동안 유지됩니다."
             }
         },
 
