--- a/src/locale/jp.json
+++ b/src/locale/jp.json
@@ -221,7 +221,8 @@
         "레온": "レオン",
         "일레븐": "Eleven",
         "리오": "莉央",
-        "윌리엄": "ウィリアム"
+        "윌리엄": "ウィリアム",
+        "니키": "ニッキー"
     },
     "weapons": {
         "투척": "投げ", 
@@ -671,7 +672,11 @@
         "금강저": "金剛杵",
         "파이어볼": "ファイヤーボール",
         "프리즘볼": "プリズムボール",
-        "모호크헬멧": "モホークヘルメット"
+        "모호크헬멧": "モホークヘルメット",
+        "파초선": "芭蕉扇",
+        "해적깃발": "海賊の旗",
+        "나이팅게일": "ナイチンゲール",
+        "글록48": "グロック48"
 
     },
     "skill": {
@@ -1373,6 +1378,28 @@
             "R": {
                 "name": "ウィーニングショット",
                 "Detail": "ウィリアムがジャンプし、指定した地点にボールを投げ、範囲内の敵に150/250/350(+攻撃力の 45%)のダメージを与え、 2秒間移動速度を50%減少させます。中心部の敵は 2秒間移動速度が80%減少します。\n中心部から野球ボール4つが弾き出て 3.5秒間維持されます。"
+            }
+        },
+        "니키": {
+            "T": {
+                "name": "短気",
+                "Detail": "ニッキーが敵の実験体から受けるダメージを、一度に最大100まで怒りに変えます。 怒りは最大500までチャージできます。\n 怒りを最後まで貯めると短気状態になり、10 / 30 / 50の基本攻撃追加ダメージを与え、周りの敵には 10 / 30 / 50(+ 攻撃力の 40%)のスキルダメージを与えます。\n 短気状態では怒りのパンチ！(E)と怒りのアッパーカット！(R)スキルを使用できます。\n怒りをすべて消耗すると短気状態が終了し、3秒間平静状態になり怒りを獲得できません。\n怒りは非戦闘状態で毎秒4 5、短気状態で毎秒50減少します。"
+            },
+            "Q": {
+                "name": "格闘アクション / リバーブロー",
+                "Detail": "ニッキーが拳に力を溜めながら移動速度が 20%減少します。\n再び使用するとマウスの方向に突進し、最初に命中した敵を短く突き飛ばし30/55/80/105/130(+攻撃力の 40%) ~60/110/160/210/260(+攻撃力の 80%)のスキルダメージを与えます。敵にスキルが命中すると格闘アクション(Q)のクールダウンが 50% 減少します。\nチャージ時間に比例したダメージ量と突進距離が増加します。\n突進使用後、3秒間リバーブロースキルを追加で使用できます。\n 前方範囲の敵に25/50/75/100/125(+攻撃力の 100%)のダメージを与え、命中した敵1人当100の怒りを獲得します。"
+            },
+            "W": {
+                "name": "ガード&カウンター",
+                "Detail": "ガード: ニッキーがマウスカーソルの方へガードを構え、 0.75秒間受けるすべてのダメージが 60/65/70/75/80% 減少し、すべてのデバフと妨害効果を無効化します。\nダメージ効果または移動不可効果のガードに成功した場合、ガード&カウンター(W)のクールダウンが50%減少して怒りを 100%チャージし、持続時間が終わるとカウンターを発動します。\nカウンター: 短い距離を突進しながら周りの敵に 20/40/60/80/100(+攻撃力の 20%)のスキルダメージを与え、1秒間束縛します。移動不可能状態ではカウンターが発動しません。"
+            },
+            "E": {
+                "name": "強力なパンチ",
+                "Detail": "強力なパンチ: ニッキーが強力なパンチで前方の敵に 60/110/160/210/260(+攻撃力の 40%)のスキルダメージを与え、2秒間移動速度を 30%減少させます。\n怒りのパンチ！(強化): 短気状態では怒りのパンチを使用でき、使用すると短気状態が終了します。怒りのパンチ！は前方の敵に90/165/240/315/390 (+攻撃力の 40%)のスキルダメージを与え2秒間移動速度を 30%減少させ 1秒間気絶させます。\n怒りのパンチ！はクールダウンがなく、強力なパンチとクールダウンを共有しません。\n 強力なパンチ(E)と怒りのパンチ！(強化E)は連続で使用できません。"
+            },
+            "R": {
+                "name": "怒りのアッパーカット！",
+                "Detail": "短気状態だけ使用できます。使用すると短気状態が終了します。\nニッキーが対象へ突進した後、怒りのアッパーカットで攻撃し150/250/350(+攻撃力の 70%)のスキルダメージを与え1.1秒間空に浮かせます。突進中には阻止不可状態になり、対象ではない敵がニッキーと衝突すると75/125/175(+攻撃力の 35%)のスキルダメージを与えて突き飛ばします。"
             }
         },
 
