--- a/src/locale/ko.json
+++ b/src/locale/ko.json
@@ -220,7 +220,8 @@
         "레온": "레온",
         "일레븐": "일레븐",
         "리오": "리오",
-        "윌리엄": "윌리엄"
+        "윌리엄": "윌리엄",
+        "니키": "니키"
     },
     "weapons": {
         "투척": "투척", 
@@ -668,7 +669,11 @@
         "금강저": "금강저",
         "파이어볼": "파이어볼",
         "프리즘볼": "프리즘볼",
-        "모호크헬멧": "모호크헬멧"
+        "모호크헬멧": "모호크헬멧",
+        "파초선": "파초선",
+        "해적깃발": "해적깃발",
+        "나이팅게일": "나이팅게일",
+        "글록48": "글록48"
     },
     "skill": {
         "아야": {
@@ -1373,6 +1378,28 @@
             "R": {
                 "name": "위닝샷",
                 "Detail": "윌리엄이 공중으로 점프하여 지정한 지점으로 공을 던져 범위 안의 적들에게 150/250/350(+공격력의 45%)의 피해를 입히고 2초 동안 이동 속도를 50% 느려지게 합니다.\n 중심부의 적들은 2초 동안 이동 속도가 80% 느려집니다.\n중심부에서 야구공 4개가 튕겨 나와 3.5초 동안 유지됩니다."
+            }
+        },
+        "니키": {
+            "T": {
+                "name": "다혈질",
+                "Detail": "니키가 적 실험체로부터 받는 피해를 한 번에 최대 100까지 분노로 전환합니다. 분노는 최대 500까지 충전됩니다.\n분노를 최대로 충전하면 다혈질 상태가 되어, 10 / 30 / 50의 기본 공격 추가 피해를 입히며, 주변 다른 적들에게 10 / 30 / 50(+ 공격력의 40%) 스킬 피해를 입힙니다.\n다혈질 상태에서는 분노의 펀치!(E) 스킬과 분노의 어퍼컷!(R) 스킬을 사용할 수 있습니다.\n분노가 모두 소모되면 다혈질 상태가 종료되고, 3초 동안 진정상태가 되어 받는 피해로 분노를 획득할 수 없습니다.\n 분노는 비전투 상태에서 초당 4 5, 다혈질 상태에서 초당 50 감소합니다."
+            },
+            "Q": {
+                "name": "격투 액션 / 리버블로우",
+                "Detail": "니키가 주먹에 힘을 모으기 시작하며 이동 속도가 20% 감소합니다.\n다시 사용하면 마우스 방향으로 돌진하여 처음 적중한 적을 짧게 밀쳐내고 30/55/80/105/130(+공격력의 40%) ~60/110/160/210/260(+공격력의 80%) 스킬 피해를 입힙니다. 스킬이 적에게 적중하면 격투 액션(Q)의 쿨다운이 50% 감소합니다.\n 충전 시간이 비례하여 피해량과 돌진 거리가 증가합니다.\n 돌진 사용 후, 3초 동안 리버블로우 스킬을 추가로 사용할 수 있습니다.\n전방의 적에게 25/50/75/100/125(+공격력의 100%)의 스킬 피해를 입히고, 적중한 적 1명 당 분노를 100 충전합니다."
+            },
+            "W": {
+                "name": "가드&카운터",
+                "Detail": "가드: 니키가 마우스 방향으로 가드 자세를 취하여 0.75초 동안 모든 받는 피해가 60/65/70/75/80% 감소하고, 모든 해로운 효과와 방해 효과를 방어합니다.\n피해 효과 혹은 이동 방해 효과의 가드에 성공한 경우, 가드&카운터(W)의 쿨다운이 50% 감소하고 분노를 100% 충전하며, 지속 시간 종료 시 카운터를 발동합니다.\n카운터: 짧은 거리를 돌진하면서 주변 적에게 20/40/60/80/100(+공격력의 20%)의 스킬 피해를 입히고, 1초 동안 속박합니다. 이동 불가 상태에서는 카운터를 발동하지 않습니다."
+            },
+            "E": {
+                "name": "강력한 펀치",
+                "Detail": "강력한 펀치: 니키가 전방에 강력한 펀치로 충격파를 일으켜 적에게 60/110/160/210/260(+공격력의 40%)의 스킬 피해를 입히고 이동 속도를 2초 동안 30% 감소시킵니다.\n분노의 펀치(강화): 다혈질 상태에서는 분노의 펀치를 사용할 수 있으며, 사용 시 다혈질 상태가 종료됩니다. 전방의 적에게 90/165/240/315/390 (+공격력의 40%)의 스킬 피해를 입히고, 이동 속도를 2초 동안 30% 감소 키시고 1초 동안 기절시킵니다.\n 분노의 펀치는 쿨다운이 없으며, 강력한 펀치와 쿨다운을 공유하지 않습니다.\n강력한 펀치(E)와 분노의 펀치!(강화E)는 연속으로 사용할 수 있습니다."
+            },
+            "R": {
+                "name": "분노의 어퍼컷",
+                "Detail": "다혈질 상태에서만 사용할 수 있으며, 사용 시 다혈질 상태가 종료됩니다.\n니키가 대상 실험체에게 돌진한 후, 분노가 담긴 어퍼컷으로 공격하여 150/250/350(+공격력의 70%)의 스킬 피해를 입히고 1.1초 동안 공중에 띄웁니다.\n 돌진 중에는 저지 불가 상태가 되며, 대상이 아닌 적이 니키와 충돌하면 75/125/175(+공격력의 35%)의 스킬 피해를 입히고 밀쳐냅니다."
             }
         },
 
