신규캐릭 추가, 신규무기군 추카

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -222,7 +222,8 @@
         "일레븐": "Eleven",
         "리오": "Rio",
         "윌리엄": "William",
-        "니키": "Nicky"
+        "니키": "Nicky",
+        "나타폰": "Nathapon"
     },
     "weapons": {
         "투척": "Throw", 
@@ -678,7 +679,30 @@
         "파초선": "Sanguine Gunbai",
         "해적깃발": "Jolly Roger",
         "나이팅게일": "Nightingale",
-        "글록48": "Glock 48"
+        "글록48": "Glock 48",
+        "저지먼트": "Judgement",
+        "현자총통": "Blackfire Cannon",
+        "렌즈": "Lens",
+        "컴팩트카메라": "Compact Camera",
+        "미러러스": "Mirrorless",
+        "레인지파인더": "Rangefinder",
+        "컴파운드사이트": "Laser Designator",
+        "카메라건": "Pistol Camera",
+        "카메라라이플": "Carbine Camera",
+        "카메라캐논": "Cannon Camera ",
+        "V.I.C.G": "VICG",
+        "아르테미스": "Artemis",
+        "플라즈마아크": "Plasma Arc",
+        "텔루리안타임피스": "Tellurian Timepiece",
+        "프로미넌스": "Prominence",
+        "나막신": "Clogs",
+        "등산화": "Hiking Boots",
+        "탭루트": "Taproot",
+        "비질란테": "Vigilante",
+        "능동위장": " Active Camouflage",
+        "미스릴퀴버": "Mithril Quiver",
+        "오르골": "Music Box",
+        "쿤달라": "Kundala"
     },
     "skill": {
         "아야": {
@@ -1406,6 +1430,28 @@
             "R": {
                 "name": "Pure Rage Uppercut!!",
                 "Detail": "Nicky can only use Pure Rage Uppercut!! when Enraged. Using Pure Rage Uppercut!! will Calm Nicky.\n Nicky dashes to the targeted enemy player, becoming unstoppable, and uppercuts them, dealing 150/250/350(+Attack Power 70%) damage and knocking them airborne for 1.1 seconds. Nicky knocks back other enemies in the way, dealing 75/125/175(+Attack Power 35%) damage."
+            }
+        },
+        "나타폰": {
+            "T": {
+                "name": "Slow Shutter",
+                "Detail": "Nathapon’s attack speed is fixed but his Normal Attacks deal 40/80/120(+0.2 per 1% Extra Attack Speed) Extra Skill Damage."
+            },
+            "Q": {
+                "name": "Snapshot",
+                "Detail": "Passive: Dealing damage to an enemy applies Picturesque.Nathapon snaps a photograph at the targeted area, dealing 70/90/110/130/150(+Attack Power 40%) damage.\nEnemies with 3 stacks of Picturesque are slowed by 99%, decaying over 0.3 seconds."
+            },
+            "W": {
+                "name": "Time-Lapse",
+                "Detail": "Nathapon takes a Timelapse in the targeted area, dealing 70/90/110/130/150(+Attack Power 40%) damage per second to enemies and slowing them by 30%.\nThe final photograph deals 60/80/100/120/140(+Attack Power 80%)extra damage and roots subjects in frame for 2 seconds.\nRange: 6m"
+            },
+            "E": {
+                "name": "Panorama",
+                "Detail": "Nathapon takes a photo with his telephoto lens in the targeted direction. Photographed enemies take 10/30/50/70/90(+Attack Power 30%) damage and are slowed by 50% for 1 second.\nIf the photo captures an enemy, it will leave a mark. After 1.5 seconds, Nathapon’s next normal attack within 3.5 seconds deals 10/30/50/70/90(+Attack Power 30%) additional skill damage to the enemy and knocks them back to the mark.\nNathapon’s Attack Range is increased up to 10m and extra damage from Slow Shutter is applied to the enemy marked by Panorama.\nThe mark disappears when the enemy is knocked back or moves more than 8m away from the mark."
+            },
+            "R": {
+                "name": "F-Stop",
+                "Detail": "Nathapon snaps a photo of everything in the targeted area after 1 second.\nAll photographed units are put into stasis for 2.5 seconds and are unable to perform any action.\nPhotographed enemies gain 3 stacks of Picturesque."
             }
         },
 
