--- a/src/locale/jp.json
+++ b/src/locale/jp.json
@@ -222,7 +222,8 @@
         "일레븐": "Eleven",
         "리오": "莉央",
         "윌리엄": "ウィリアム",
-        "니키": "ニッキー"
+        "니키": "ニッキー",
+        "나타폰": "ナタポン"
     },
     "weapons": {
         "투척": "投げ", 
@@ -676,7 +677,30 @@
         "파초선": "芭蕉扇",
         "해적깃발": "海賊の旗",
         "나이팅게일": "ナイチンゲール",
-        "글록48": "グロック48"
+        "글록48": "グロック48",
+        "저지먼트": "ジャッジメント",
+        "현자총통": "賢者銃筒",
+        "렌즈": "レンズ",
+        "컴팩트카메라": "コンパクトカメラ",
+        "미러러스": "ミラーレス",
+        "레인지파인더": "レンジファインダー",
+        "컴파운드사이트": "コンパウンドサイト",
+        "카메라건": "カメラガン",
+        "카메라라이플": "カメラライフル",
+        "카메라캐논": "カメラキャノン",
+        "V.I.C.G": "V.I.C.G",
+        "아르테미스": "アルテミス",
+        "플라즈마아크": "プレズマアーク",
+        "텔루리안타임피스": "テルリアンタイムピース",
+        "프로미넌스": "プロミネンス",
+        "나막신": "木靴",
+        "등산화": "登山靴",
+        "탭루트": "タップルート",
+        "비질란테": "ビジランテ",
+        "능동위장": "能動偽装",
+        "미스릴퀴버": "ミスリルクイーバー",
+        "오르골": "オルゴール",
+        "쿤달라": "クンダーラ"
 
     },
     "skill": {
@@ -1402,6 +1426,28 @@
                 "Detail": "短気状態だけ使用できます。使用すると短気状態が終了します。\nニッキーが対象へ突進した後、怒りのアッパーカットで攻撃し150/250/350(+攻撃力の 70%)のスキルダメージを与え1.1秒間空に浮かせます。突進中には阻止不可状態になり、対象ではない敵がニッキーと衝突すると75/125/175(+攻撃力の 35%)のスキルダメージを与えて突き飛ばします。"
             }
         },
+        "나타폰": {
+            "T": {
+                "name": "スローシャッター",
+                "Detail": "ナタポンが使用するカメラは攻撃速度が固定されている代わりに、基本攻撃を行うとき40/80/120(+追加攻撃速度 1%あたり0.2)"
+            },
+            "Q": {
+                "name": "スナップ写真",
+                "Detail": "持続効果: 的にダメージを与えると被写体効果を付与します。"
+            },
+            "W": {
+                "name": "タイムラプス",
+                "Detail": "ナタポンが低速撮影をするカメラを設置して、範囲内の敵に毎秒15/25/35/45/55(+攻撃力の 40%)のダメージを与えます。該当位置の敵は移動速度が30%減少します。\nカメラの最後の撮影は60/80/100/120/140(+攻撃力の 80%)の追加ダメージを与え 2秒間束縛します。"
+            },
+            "E": {
+                "name": "インスタントフォト",
+                "Detail": "ナタポンがフレームを発射して、命中した敵に10/30/50/70/90(+攻撃力の 30%)のダメージを与え移動速度を1秒間50%減少させます。フレームを当てるとその位置に刻印を残し、 1.5秒後から3.5秒間ナタポンは基本攻撃からフレームを当てた敵に10/30/50/70/90(+攻撃力の 30%)のスキルダメージを与え、刻印を残した位置に戻します。\nこのとき、フレーム当てた敵に限って攻撃射程距離が10mまで増加し、スローシャッターの追加ダメージが適用されます。\n刻印を当てた敵を突き飛ばしたり、その敵が刻印から8m以上離れると刻印が消えます。"
+            },
+            "R": {
+                "name": "シャッターチャンス",
+                "Detail": "ナタポンがタイマーを設定し、１秒後に範囲内のすべての敵を撮影します。\n撮影した対象は2.5秒間無敵状態になる代わりに行動ができなくなります。\n撮影した敵に即時被写体スタック3を付与します。"
+            }
+        },
 
         
         "단검": {
@@ -1482,7 +1528,11 @@
         },
         "채찍": {
             "name": "鉤",
-            "Detail": "鞭を前方に飛ばして当たった敵にダメージを与えた後、自分の方へと引っ張ります。\n"
+            "Detail": "鞭を前方に飛ばして当たった敵にダメージを与えた後、自分の方へと引っ張ります。"
+        },
+        "카메라": {
+            "name": "フラッシュ",
+            "Detail": "フラッシュを使用して 80/160(+攻撃力の 50/100%)のスキルダメージを与えます。\n 自分を見ている敵は 100/200追加スキルダメージを負い1.5秒間視界が減少します。"
         }
     }
 
