--- a/src/locale/ko.json
+++ b/src/locale/ko.json
@@ -221,7 +221,8 @@
         "일레븐": "일레븐",
         "리오": "리오",
         "윌리엄": "윌리엄",
-        "니키": "니키"
+        "니키": "니키",
+        "나타폰": "나타폰"
     },
     "weapons": {
         "투척": "투척", 
@@ -673,7 +674,30 @@
         "파초선": "파초선",
         "해적깃발": "해적깃발",
         "나이팅게일": "나이팅게일",
-        "글록48": "글록48"
+        "글록48": "글록48",
+        "저지먼트": "저지먼트",
+        "현자총통": "현자총통",
+        "렌즈": "렌즈",
+        "컴팩트카메라": "컴팩트카메라",
+        "미러러스": "미러러스",
+        "레인지파인더": "레인지파인더",
+        "컴파운드사이트": "컴파운드사이트",
+        "카메라건": "카메라건",
+        "카메라라이플": "카메라라이플",
+        "카메라캐논": "카메라캐논",
+        "V.I.C.G": "V.I.C.G",
+        "아르테미스": "아르테미스",
+        "플라즈마아크": "플라즈마아크",
+        "텔루리안타임피스": "텔루리안타임피스",
+        "프로미넌스": "프로미넌스",
+        "나막신": "나막신",
+        "등산화": "등산화",
+        "탭루트": "탭루트",
+        "비질란테": "비질란테",
+        "능동위장": "능동위장",
+        "미스릴퀴버": "미스릴퀴버",
+        "오르골": "오르골",
+        "쿤달라": "쿤달라"
     },
     "skill": {
         "아야": {
@@ -1402,6 +1426,28 @@
                 "Detail": "다혈질 상태에서만 사용할 수 있으며, 사용 시 다혈질 상태가 종료됩니다.\n니키가 대상 실험체에게 돌진한 후, 분노가 담긴 어퍼컷으로 공격하여 150/250/350(+공격력의 70%)의 스킬 피해를 입히고 1.1초 동안 공중에 띄웁니다.\n 돌진 중에는 저지 불가 상태가 되며, 대상이 아닌 적이 니키와 충돌하면 75/125/175(+공격력의 35%)의 스킬 피해를 입히고 밀쳐냅니다."
             }
         },
+        "나타폰": {
+            "T": {
+                "name": "슬로우 셔터",
+                "Detail": "나타폰은 매 순간을 신중하게 카메라에 담습니다.\n 나타폰이 사용하는 카메라는 공격 속도가 고정되어 있는 대신 기본 공격할 때 40/80/120(+추가 공격 속도 1%당 0.2)의 추가 스킬 피해를 입힙니다."
+            },
+            "Q": {
+                "name": "스냅샷",
+                "Detail": "지속 효과: 적에게 피해를 입히면 피사체 스택을 부여합니다.\n나타폰이 지역을 촬영하여 70/90/110/130/150(+공격력의 40%)의 피해를 입힙니다.\n피사체가 3스택인 적은 0.3초 동안 이동 속도가 99% 감소했다가 빠르게 회복됩니다."
+            },
+            "W": {
+                "name": "타임 랩스",
+                "Detail": "나타폰이 저속 촬영을 하는 카메라를 설치하여 매 초 마다 15/25/35/45/55(+공격력의 40%)의 피해를 입힙니다.\n 해당 지역에 있는 적은 이동 속도가 30% 감소합니다.\n카메라의 마지막 촬영은 60/80/100/120/140(+공격력의 80%)의 추가 피해를 입히고 2초 동안 속박합니다."
+            },
+            "E": {
+                "name": "인스턴트 포토",
+                "Detail": "나타폰이 프레임을 발사하여 적중한 적에게 10/30/50/70/90(+공격력의 30%)의 피해를 입히고 이동 속도를 1초 동안 50% 느려지게 합니다.\n프레임을 맞추면 그 위치에 표식을 남기며 1.5초 후부터 3.5초 동안 나타폰이 기본 공격을 통해 프레임을 맞춘 적에게 10/30/50/70/90(+공격력의 30%)의 스킬 피해를 입히고 표식을 남긴 위치로 되돌려 보냅니다.\n이 때 프레임을 맞춘 적에 한해 기본 공격 사거리가 10m까지 증가하며 슬로우 셔터의 추가 스킬 피해가 적용됩니다.\n표식을 맞춘 적을 밀어내거나 그 적이 표식으로부터 8m 이상 멀어지면 표식이 사라집니다."
+            },
+            "R": {
+                "name": "셔터 찬스",
+                "Detail": "나타폰이 타이머를 설정해 1초 뒤에 범위 내의 모든 대상을 촬영합니다.\n촬영한 대상은 2.5초간 무적 상태가 되는 대신 아무런 행동도 할 수 없습니다.촬영한 적에게는 즉시 피사체 3중첩을 부여합니다."
+            }
+        },
 
 
         
@@ -1484,6 +1530,10 @@
         "채찍": {
             "name": "갈고리",
             "Detail": "채찍을 앞으로 날려 맞은 적에게 피해를 주고 앞으로 끌고 옵니다."
+        },
+        "카메라": {
+            "name": "플래시",
+            "Detail": "플래시를 터트려 80/160(+공격력의 50/100%)의 스킬 피해를 입힙니다.\n자신을 바라보던 적들은 100/200의 추가 스킬 피해를 입고 1.5초 동안 시야가 감소합니다."
         }
 
     }
