--- a/src/locale/jp.json
+++ b/src/locale/jp.json
@@ -682,13 +682,13 @@
         "현자총통": "賢者銃筒",
         "렌즈": "レンズ",
         "컴팩트카메라": "コンパクトカメラ",
-        "미러러스": "ミラーレス",
+        "미러리스": "ミラーレス",
         "레인지파인더": "レンジファインダー",
         "컴파운드사이트": "コンパウンドサイト",
         "카메라건": "カメラガン",
         "카메라라이플": "カメラライフル",
         "카메라캐논": "カメラキャノン",
-        "V.I.C.G": "V.I.C.G",
+        "VICG": "VICG",
         "아르테미스": "アルテミス",
         "플라즈마아크": "プレズマアーク",
         "텔루리안타임피스": "テルリアンタイムピース",
