--- a/src/locale/pt.json
+++ b/src/locale/pt.json
@@ -684,13 +684,13 @@
         "현자총통": "Blackfire Cannon",
         "렌즈": "Lens",
         "컴팩트카메라": "Compact Camera",
-        "미러러스": "Mirrorless",
+        "미러리스": "Mirrorless",
         "레인지파인더": "Rangefinder",
         "컴파운드사이트": "Laser Designator",
         "카메라건": "Pistol Camera",
         "카메라라이플": "Carbine Camera",
         "카메라캐논": "Cannon Camera ",
-        "V.I.C.G": "VICG",
+        "VICG": "VICG",
         "아르테미스": "Artemis",
         "플라즈마아크": "Plasma Arc",
         "텔루리안타임피스": "Tellurian Timepiece",
