--- a/src/locale/scn.json
+++ b/src/locale/scn.json
@@ -682,13 +682,13 @@
         "현자총통": "霹雳火炮",
         "렌즈": "镜头",
         "컴팩트카메라": "袖珍相机",
-        "미러러스": "复古相机",
+        "미러리스": "复古相机",
         "레인지파인더": "测距仪",
         "컴파운드사이트": "全息瞄准镜",
         "카메라건": "摄影枪",
         "카메라라이플": "步枪式相机",
         "카메라캐논": "高倍望远大炮",
-        "V.I.C.G": "V.I.C.G",
+        "VICG": "VICG",
         "아르테미스": "阿提米丝",
         "플라즈마아크": "等离子电盾",
         "텔루리안타임피스": "银河腕表",
