--- a/src/locale/tcn.json
+++ b/src/locale/tcn.json
@@ -683,13 +683,13 @@
         "현자총통": "霹靂火炮",
         "렌즈": "鏡頭",
         "컴팩트카메라": "袖珍相機",
-        "미러러스": "復古相機",
+        "미러리스": "復古相機",
         "레인지파인더": "測距儀",
         "컴파운드사이트": "全息瞄準鏡",
         "카메라건": "攝影槍",
         "카메라라이플": "步槍式相機",
         "카메라캐논": "高倍望遠大炮",
-        "V.I.C.G": "V.I.C.G",
+        "VICG": "VICG",
         "아르테미스": "阿提米絲",
         "플라즈마아크": "等離子電盾",
         "텔루리안타임피스": "銀河腕錶",
